# webrtc_ros

./: CMakeLists.txt  README.md  package.xml
include/webrtc_ros/: ros_pcl_capturer.h  webrtc_client.h
launch/: webrtc_ros_server.launch.py
src/: ice_candidate_message.cpp  ros_pcl_capturer.cpp  ros_video_capturer (copy).cpp  ros_video_capturer.cpp  ros_video_renderer (copy).cpp  webrtc_client.cpp  webrtc_ros_server.cpp  webrtc_ros_server_node.cpp  webrtc_web_server.cpp
web/: get_ip_address.php  index.html  index.js  viewer (3rd copy).html  viewer (another copy).html  viewer (copy).html  viewer.html  viewer.js  viewer2.html  webrtc_ros (copy).js  webrtc_ros.js  worker.js
